--- a/Coditech.Project/Admin/Coditech.Admin/Views/Accounts/AccSetupGL/_ChildModel.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Accounts/AccSetupGL/_ChildModel.cshtml
@@ -35,6 +35,7 @@
                         <input type="hidden" name="AccSetupCategoryId" value="" />
                         <input type="hidden" name="AccSetupBalancesheetId" value="" />
                         <input type="hidden" name="AccSetupBalanceSheetTypeId" value="" />
+                        <input type="hidden" name="SelectedCentreCode" value="" />
 
                         <div class="flex flex-col space-y-2">
                             @Html.LabelFor(x => x.AccSetupGLTypeId, new { @class = "form-label required" })
@@ -45,13 +46,15 @@
                         <div class="flex flex-col space-y-2">
                             @Html.LabelFor(x => x.GLName, new { @class = "form-label required" })
                             @Html.TextBoxFor(x => x.GLName, new { @class = "form-control" })
-                            @Html.ValidationMessageFor(x => x.GLName, "", new { @class = "text-danger" })
+                            @* @Html.ValidationMessageFor(x => x.GLName, "", new { @class = "text-danger" }) *@
+                            @Html.ValidationMessageFor(x => x.GLName)
                         </div>
 
                         <div class="flex flex-col space-y-2">
                             @Html.LabelFor(x => x.GLCode, new { @class = "form-label required" })
-                            @Html.TextBoxFor(x => x.GLCode, new { @class = "form-control" })
-                            @Html.ValidationMessageFor(x => x.GLCode, "", new { @class = "text-danger" })
+                            @Html.TextBoxFor(x => x.GLCode, new { @class = "form-control", @onkeypress = "return CoditechCommon.AvoidSpacing()" })
+                            @* @Html.ValidationMessageFor(x => x.GLCode, "", new { @class = "text-danger" }) *@
+                            @Html.ValidationMessageFor(x => x.GLCode)
                         </div>
 
                         <div class="flex flex-col space-y-2">
