--- a/Coditech.Project/Admin/Coditech.Admin/Views/Accounts/AccSetupGL/_UpdateAccountSetupGL.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Accounts/AccSetupGL/_UpdateAccountSetupGL.cshtml
@@ -15,6 +15,7 @@
     @Html.HiddenFor(m => m.AccSetupBalancesheetId)
     @Html.HiddenFor(m => m.AccSetupChartOfAccountTemplateId)
     @Html.HiddenFor(m => m.ParentAccSetupGLId)
+    @Html.HiddenFor(m => m.IsSystemGenerated)
     @* <button type="submit" class="btn btn-success" style="margin-top: 20px;">@AdminResources.LabelSave</button> *@
 }
 
